# ausrabot_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: ausrabot.rviz  ausrabot_controller.yaml
launch/: ausrabot_omni.launch.py  customOmniDrive.launch.py  display_ausrabot.launch.py  full.launch.py  spawn_ausrabot.launch.py
meshes/: base_link.STL  lidar.STL  oak_camera.STL  wheel_1.STL  wheel_2.STL  wheel_3.STL
urdf/: ausrabot.urdf.xacro  ausrabot.xacro  ausrabot_full.urdf.xacro
urdf/ausrabot/: ausrabot_core.xacro  gazebo.xacro  sensors.xacro
