<?xml version="1.0"?>
<package format="3">
  <name>ausrabot_description</name>
  <version>1.0.0</version>
  <description>URDF and launch files for the AUSRA robot.</description>
  <maintainer email="TODO@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend> 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>